# crates-registry-api

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/2024-09-13-201441_create_rustacean/: up.sql
migrations/2024-09-13-201442_create_crate/: down.sql  up.sql
migrations/2024-09-14-042520_role/: up.sql
migrations/2024-09-14-042537_user_role/: up.sql
src/: lib.rs  main.rs  schema.rs
src/commands/: users.rs
src/dto/: mod.rs  new_crate.rs
src/dtos/: mod.rs  new_crate.rs  new_role.rs  new_rustacean.rs  new_user.rs  new_user_role.rs
src/models/: crate_.rs  mod.rs  role.rs  rustacean.rs  user_role.rs  users.rs
src/repositories/: crate_repository.rs  generic_repository.rs  mod.rs  rustacean_repository.rs
src/routes/: crate_routes.rs  mod.rs  rustacean_routes.rs
