[package]
name = "crates-registry-api"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"          # Optimize for size
lto = "thin"             # Use Link Time Optimization
codegen-units = 1        # Single codegen unit for better optimization
debug = true             # Debug symbols in release build
panic = "abort"          # Abort on panic for smaller binary
incremental = false      # Disable incremental compilation

[dependencies]
chrono = "0.4.38"
diesel = { version = "2.2.0", features = ["postgres"] }
